# MiniKV-Dev

./: .gitignore  README.md  error.txt  load_libary.slurm  pyproject.toml  requirements.txt
example/: inference_llava.py
experiments/LongBench/: eval.py  eval_code.sh  job_helper.py  mem_spd_test.py  pred_minikv.py  pred_snap.py  requirements.txt  sample.slurm
experiments/LongBench/config/: model2maxlen.json  model2path.json
experiments/Systems/: job_helper.py  launch_jobs.sh  merge_results.py  sample.slurm  system_benchmark.py
experiments/infinite_bench/: README.md  args.py  compute_scores.py  gen_sh.sh  launch_jobs.sh  run_infinitebench.py  run_infinitebench_snap.sh
experiments/infinite_bench/config/: model2maxlen.json
experiments/infinite_bench/results/llama-2-7B-32k-instructuse_snapTrue_p0d1_w32_k7_poolmaxpool/: prediction_kv_retrieval.jsonl
experiments/infinite_bench/scripts/snapKV/: job1.slurm  job10.slurm  job2.slurm  job3.slurm  job4.slurm  (+5 more)
experiments/infinite_bench/slurm_out/: 5879027.out  5879035.out  5879036.out
minikv/monkeypatch/: cache_impl.py  config_print.py  llama_hijack_4_37.py  minikv_llama3_hijack_4_37.py  minikv_llama_hijack_4_37.py  minikv_mistral_hijack_4_37.py  minikv_utils.py  mistral_hijack_4_37.py  mixtral_hijack_4_37.py  monkeypatch.py  snap_minikv_llama_hijack_4_37.py  snap_minikv_mistral_hijack_4_37.py
quant/: setup.py  test.py
quant/csrc/: gemv_cuda.h.gch
snapkv/monkeypatch/: minikv_llama_hijack_4_37.py  minikv_mistral_hijack_4_37.py  monkeypatch.py  snap_minikv_llama_hijack_4_37.py  snap_minikv_mistral_hijack_4_37.py  snapkv_utils.py
